# vibe-orchestrator

./: .gitignore  CHANGELOG.md  README.md  STARMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: MCP_SERVERS.md
tests/: __init__.py  test_circuit.py  test_config.py  test_e2e_supervisor.py  test_exceptions.py  test_reviewer.py  test_state.py  test_supervisor.py
vibe/: __init__.py  cli.py  config.py  exceptions.py  pricing.py  state.py
vibe/claude/: __init__.py  circuit.py  executor.py  health.py
vibe/cli/: __init__.py  commands.py  debug.py  execution.py  interactive.py  project.py  prompt.py  startup.py  typer_commands.py
vibe/gemini/: __init__.py  client.py  prompts.py
vibe/glm/: __init__.py  client.py  debug_state.py  parser.py  prompts.py
vibe/integrations/: __init__.py  github_ops.py  research.py
vibe/logging/: __init__.py  config.py  entries.py  handlers.py  viewer.py
vibe/memory/: __init__.py  compaction.py  debug_session.py  keeper.py  pattern_learning.py  task_history.py
vibe/orchestrator/: __init__.py  project_updater.py  reviewer.py  supervisor.py  task_board.py  task_enforcer.py  task_queue.py  task_routing.py
vibe/orchestrator/workflows/: __init__.py  engine.py  injector.py  templates.py
vibe/persistence/: __init__.py  models.py  repository.py  schema.sql
vibe/tui/: __init__.py  app.py
