[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-orchestrator"
version = "0.1.0"
description = "GLM-4.7 as brain, Claude Code as worker - AI pair programming orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brian", email = "brian@example.com" }
]
keywords = ["ai", "claude", "glm", "orchestrator", "pair-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.0.0",           # OpenRouter API (GLM-4.7)
    "rich>=13.0.0",            # Terminal UI
    "textual>=0.89.0",         # Async TUI framework
    "anyio>=4.0.0",            # Async support
    "typer>=0.9.0",            # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vibe = "vibe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vibe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
